--- a/Frontend/Gestion_DPI/documentation/interfaces/Patient.html
+++ b/Frontend/Gestion_DPI/documentation/interfaces/Patient.html
@@ -679,10 +679,7 @@ export class GenererGraphe implements OnInit{
     this.dialogRef.close();
   }
   
-}
-
-
-</code></pre>
+}</code></pre>
     </div>
 </div>
 
