--- a/Frontend/Gestion_DPI/documentation/interfaces/Bilan.html
+++ b/Frontend/Gestion_DPI/documentation/interfaces/Bilan.html
@@ -640,10 +640,7 @@ export class GenererGraphe implements OnInit{
     this.dialogRef.close();
   }
   
-}
-
-
-</code></pre>
+}</code></pre>
     </div>
 </div>
 
